# stdb

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
data/: new-york-city-boroughs.geojson
stdb/: cli.py  utils.py
stdb/commands/: export.py  export_events.py  export_leaderboard.py  inspect.py  inspect_table.py
